# Plants

./: .gitignore  Cargo.toml  LoadJSON.py  Makefile  PlantSpecies.py  activities.html  activity_logs.html  add_species.py  bot_conf_empty.json  bot_service.service  common.py  gallery.html  graveyard.html  html_outindex.html  index.html  json_updater.py  left  load_json.py  main.py  plant_db.sql  plant_overview.html  plants.db  res  species_overview.html  updater.py
Logs/: Activities.csv  Graveyard.csv  Growth.csv
PlantSpecies/: AloeVera.json  AppleMint.json  AustralianUmbrellaTree.json  Avocado.json  Basil.json  Beetroot.json  Begonia.json  BirdofParadise.json  Broccoli.json  BunnyEarCactus.json  Carrot.json  ChiliPepper.json  ChineseFig.json  CommonIvy.json  Corn.json  DevilsIvy.json  DragonTree.json  DroopingPricklyPear.json  Efeutute.json  Ficus.json  FiddleLeafFig.json  GardenCress.json  Garlic.json  GymnocalyciumStenopleurum.json  Haworthia.json  HeartofJesus.json  Hellebore.json  Hosta.json  IvoryTower.json  JadePlant.json  JapaneseLaurel.json  Lavender.json  MonsteraAdanosii.json  MonsteraDeliciosa.json  MonsteraMinima.json  NervePlant.json  Onion.json  Pea.json  PeaceLily.json  Pineapple.json  (+19 more)
Plants/: Al.json  Albus.json  Amy.json  Anya.json  Atuin.json  Avi.json  Bart.json  Beehome.json  Behemoth.json  Ben.json  (+107 more)
render_static/: Cargo.toml
render_static/src/: main.rs
serve_html/: Cargo.toml
serve_html/src/: main.rs
telegram_bot/: BotActions.py  Cargo.toml  PlantBot.py
telegram_bot/src/: action_handler.rs  bot.rs  commands.rs  config.rs  error_handler.rs  errors.rs  fsm.rs  main.rs
telegram_bot/src/bot_actions/: fertilize_plants.rs  get_location_plants.rs  get_plant_activities.rs  get_plant_details.rs  get_plant_fertilizing.rs  get_plant_growth.rs  get_plant_watering.rs  get_species_details.rs  input_handlers.rs  mod.rs  move_to_graveyard.rs  new_activity.rs  new_growth.rs  new_plant.rs  new_species.rs  rain.rs  update_plant.rs  update_species.rs  water_location.rs  water_plants.rs
(+1541 files in other folders)
