[workspace]
members = [
  "lib/plants",
  "lib/database",
  "lib/html",
  "lib/pages",
  "lib/render_html",
  "lib/logger",
  "lib/bot_api",
  "render_static",
  "telegram_bot",
  "port_data",
  "sync_databases",
  "serve_html",
]
resolver = "2"
default-members = ["render_static","telegram_bot", "port_data","sync_databases","serve_html"]
