[package]
name = "plant_website_static"
version = "0.0.1"
edition = "2021"

[[bin]]
name="plant_website_static"
path="src/main.rs"

[dependencies]
plants = { path = "../lib/plants" }
database = { path = "../lib/database" }
html = {path="../lib/html"}
pages = {path="../lib/pages"}
render_html = {path="../lib/render_html"}
logger = {path="../lib/logger"}
log = "0.4.22"
