[package]
name = "plant_updater_bot"
version = "0.0.1"
edition = "2021"

[[bin]]
name="plant_updater_bot"
path="src/main.rs"

[dependencies]
database = {path="../lib/database"}
plants = {path="../lib/plants"}
chrono = "0.4.38"
tokio={version="1.39.2",features = ["rt-multi-thread", "macros"] }
teloxide="0.13.0"
